--- a/hrm/src/app/app.component.css
+++ b/hrm/src/app/app.component.css
@@ -11,11 +11,12 @@
 }
 
 .centered-content {
+	background: #999;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 50vh;
+	min-height: 75vh;
 	padding: 20px;
 }
 
