--- a/hrm/src/app/general/creation/creation/creation.component.html
+++ b/hrm/src/app/general/creation/creation/creation.component.html
@@ -1,1 +1,31 @@
-<p>creation works!</p>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="german">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> German </th>
+        <td mat-cell *matCellDef="let row"> {{row.german}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="english">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> English </th>
+        <td mat-cell *matCellDef="let row"> {{row.english}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="amountOfRightAnswers">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Right </th>
+        <td mat-cell *matCellDef="let row"> {{row.amountOfRightAnswers}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="amountOfWrongAnswers">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Wrong </th>
+        <td mat-cell *matCellDef="let row"> {{row.amountOfWrongAnswers}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
