--- a/hrm/src/app/general/creation/creation/creation.component.html
+++ b/hrm/src/app/general/creation/creation/creation.component.html
@@ -1,3 +1,8 @@
+<div class="action-buttons">
+    <button mat-flat-button color="primary" (click)="openDialog()">Create Word Pair</button>
+
+</div>
+
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <ng-container matColumnDef="id">
