added default data functionality with a button to load it manually

--- a/hrm/src/app/general/creation/creation/creation.component.html
+++ b/hrm/src/app/general/creation/creation/creation.component.html
@@ -1,6 +1,6 @@
 <div class="action-buttons">
     <button mat-flat-button color="primary" (click)="openDialog()">Create Word Pair</button>
-
+    <button mat-flat-button color="primary" (click)="loadTestData()">Test Data</button>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
