--- a/hrm/src/app/general/creation/creation/creation.component.html
+++ b/hrm/src/app/general/creation/creation/creation.component.html
@@ -1,32 +1,33 @@
 <div class="action-buttons">
     <button mat-flat-button color="primary" (click)="openDialog()">Create Word Pair</button>
     <button mat-flat-button color="primary" (click)="loadTestData()">Test Data</button>
+    <button mat-flat-button color="primary" (click)="resetData()">Reset Data</button>
 </div>
 
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <th mat-header-cell *matHeaderCellDef> ID </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="german">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> German </th>
+        <th mat-header-cell *matHeaderCellDef (click)="sortByGerman()"> German </th>
         <td mat-cell *matCellDef="let row"> {{row.german}} </td>
     </ng-container>
 
     <ng-container matColumnDef="english">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> English </th>
+        <th mat-header-cell *matHeaderCellDef (click)="sortByEnglish()"> English </th>
         <td mat-cell *matCellDef="let row"> {{row.english}} </td>
     </ng-container>
 
     <ng-container matColumnDef="amountOfRightAnswers">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Right </th>
+        <th mat-header-cell *matHeaderCellDef> Right </th>
         <td mat-cell *matCellDef="let row"> {{row.amountOfRightAnswers}} </td>
     </ng-container>
 
     <ng-container matColumnDef="amountOfWrongAnswers">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Wrong </th>
+        <th mat-header-cell *matHeaderCellDef> Wrong </th>
         <td mat-cell *matCellDef="let row"> {{row.amountOfWrongAnswers}} </td>
     </ng-container>
 
