--- a/hrm/src/app/general/creation/creation/creation.component.html
+++ b/hrm/src/app/general/creation/creation/creation.component.html
@@ -1,15 +1,10 @@
 <div class="action-buttons">
-    <button mat-flat-button color="primary" (click)="openDialog()">Create Word Pair</button>
+    <button mat-flat-button color="primary" (click)="openDialog()">Add Word Pair</button>
     <button mat-flat-button color="primary" (click)="loadTestData()">Test Data</button>
     <button mat-flat-button color="primary" (click)="resetData()">Reset Data</button>
 </div>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
-    </ng-container>
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
 
     <ng-container matColumnDef="german">
         <th mat-header-cell *matHeaderCellDef (click)="sortByGerman()"> German </th>
